# zj-prompt-jumper

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: ansi.rs  config.rs  lib.rs  main.rs  scan.rs
