[package]
name = "zj-prompt-jumper"
version = "0.1.0"
edition = "2021"
description = "Zellij plugin: jump to previous/next shell prompt in scroll mode"
license = "MIT"

[lib]
name = "zj_prompt_jumper"
path = "src/lib.rs"

[[bin]]
name = "zj-prompt-jumper"
path = "src/main.rs"

[dependencies]
zellij-tile = "0.44"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
