[package]
name = "zj-prompt-jumper"
version = "0.1.1"
edition = "2021"
description = "Zellij plugin: jump to previous/next shell prompt in scroll mode"
license = "MIT"
authors = ["Thiago Alves <thiago@rapinialves.com>"]
repository = "https://github.com/Townk/zj-prompt-jumper"
homepage = "https://github.com/Townk/zj-prompt-jumper"
readme = "README.md"
keywords = ["zellij", "plugin", "scrollback", "terminal", "wasm"]
categories = ["command-line-utilities"]

[lib]
name = "zj_prompt_jumper"
path = "src/lib.rs"

[[bin]]
name = "zj-prompt-jumper"
path = "src/main.rs"
# The binary is the WASM plugin entry point; its zellij-tile calls resolve to
# host shim symbols that only exist under wasm32-wasi. Excluding it from host
# test/bench builds keeps `cargo test` working (logic lives in the library).
test = false
bench = false

[dependencies]
zellij-tile = "0.44"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
